# minimal-reth

./: Cargo.toml  README.md
crates/guest-primitives/: Cargo.toml
crates/guest-primitives/src/: input.rs  lib.rs  state_root.rs  witness.rs
crates/host-primitives/: Cargo.toml
crates/host-primitives/src/: lib.rs
script/: Cargo.toml
