[workspace]
members = ["crates/*", "bin/host", "bin/zk-host"]
# default-members = ["bin/host", "bin/client"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["puma314"]
repository = "https://github.com/moongate-forks/minimal-reth"
homepage = "https://github.com/moongate-forks/minimal-reth"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
# General
eyre = "0.6"
anyhow = { version = "1.0.86", default-features = false }
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
lru = "0.12.3"
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false }
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
futures = "0.3"
url = "2.3"

reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0", default-features = false, features = ["alloy-compat"]}
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" } 

alloy-primitives = "0.7.2"
alloy-provider = { version = "0.1", default-features = false, features = [
    "reqwest",
] }
alloy-rpc-types = { version = "0.1", default-features = false, features = [
    "eth",
] }
alloy-rlp = "0.3.4"
alloy-consensus = { version = "0.1", default-features = false }
alloy-transport = { version = "0.1" }
alloy-transport-http = { version = "0.1", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-eips = { version = "0.1", default-features = false }

# EVM
revm = { version = "10.0.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-primitives = { version = "5.0.0", features = [
    "std",
], default-features = false }
revm-inspectors = "0.1"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
